[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/ScreenWiper.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Items/screenwipe.png" type="Texture" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -318.257, 3.71014, 0, 0, 0, 0, 584.592, -6.49274 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 497, 285 )
scale = Vector2( 2.67708, 3.23438 )
curve = SubResource( 1 )

[node name="ScreenWipeLocation" type="PathFollow2D" parent="Path2D"]
position = Vector2( -318.257, 3.71014 )
rotation = -0.0113002
scale = Vector2( 1, 1.75455 )
loop = false

[node name="ScreenWipe" type="Sprite" parent="Path2D/ScreenWipeLocation"]
position = Vector2( -20.9144, 2.51593 )
scale = Vector2( 0.373541, 0.309178 )
z_index = 1
texture = ExtResource( 2 )

[node name="WipeTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="WipeTimer" to="." method="_on_WipeTimer_timeout"]
